Finished intro text of the form section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="main-container">
@@ -13,7 +13,13 @@
 
         </div>
         <div class="form-container">
-            
+            <div class="intro-text">
+                <h1>
+                    This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
+                    Sign up <span class="italic">now</span> to get started.
+                </h1>
+                <h1>You <span class="italic">know</span> you want to.</h1>
+            </div>            
         </div>
     </div>
 </body>
