Started form layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,43 @@
                     Sign up <span class="italic">now</span> to get started.
                 </h1>
                 <h1>You <span class="italic">know</span> you want to.</h1>
+            </div>
+            <div class="form-box">
+                <form action="#">
+                    <h1>Let's do this!</h1>
+                    <section>
+                        <div class="form-row">
+                            <div class="label-input-pair">
+                                <label for="first-name">FIRST NAME</label>
+                                <input type="text" id="first-name">
+                            </div>
+                            <div class="label-input-pair">
+                                <label for="last-name">LAST NAME</label>
+                                <input type="text" id="last-name">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="label-input-pair">
+                                <label for="email">EMAIL</label>
+                                <input type="text" id="email">
+                            </div>
+                            <div class="label-input-pair">
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <input type="text" id="phone-number">
+                            </div> 
+                        </div>
+                        <div class="form-row">
+                            <div class="label-input-pair">
+                                <label for="pwd">PASSWORD</label>
+                                <input type="text" id="pwd">
+                            </div>
+                            <div class="label-input-pair">
+                                <label for="confirm-pwd">CONFIRM PASSWORD</label>
+                            <input type="text" id="confirm-pwd">
+                            </div>
+                        </div>
+                    </section>
+                </form>
             </div>            
         </div>
     </div>
