Improved form layout

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                         <div class="form-row">
                             <div class="label-input-pair">
                                 <label for="pwd">PASSWORD</label>
-                                <input type="text" id="pwd">
+                                <input type="text" id="pwd" class="error">
+                                <p class="error-msg">* Passwords do not match</p>
                             </div>
                             <div class="label-input-pair">
                                 <label for="confirm-pwd">CONFIRM PASSWORD</label>
-                            <input type="text" id="confirm-pwd">
+                            <input type="text" id="confirm-pwd" class="error">
                             </div>
                         </div>
                     </section>
