Finished form layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </h1>
                 <h1>You <span class="italic">know</span> you want to.</h1>
             </div>
-            <div class="form-box">
-                <form action="#">
+            <form action="#"></form>
+                <div class="form-box">
                     <h1>Let's do this!</h1>
                     <section>
                         <div class="form-row">
@@ -56,8 +56,14 @@
                             </div>
                         </div>
                     </section>
-                </form>
-            </div>            
+                </div>            
+                <section>
+                    <div class="form-ending">
+                        <button type="submit">Create Account</button>
+                        <p>Already have an account? <a href="#">Log in</a></p>
+                    </div>
+                </section>
+            </form>
         </div>
     </div>
 </body>
