Started image and logo sidebar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="main-container">
         <div class="img-container">
-
+            <div class="logo-background">
+                <img src="assets/odin-lined.png" alt="Odin Logo">
+                <h1 class="norse">Odin</h1>
+            </div>
         </div>
         <div class="form-container">
             <div class="intro-text">
