--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 <img src="assets/odin-lined.png" alt="Odin Logo">
                 <h1 class="norse">Odin</h1>
             </div>
+            <p class="img-credits">
+                Photo by <a href="https://unsplash.com/photos/25xggax4bSA" target="_blank">Halie West</a>
+                on <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+            </p>
         </div>
         <div class="form-container">
             <div class="intro-text">
